# reuleaux_moveit

./: .gitignore  README.md
map_generation/: CMakeLists.txt  package.xml
map_generation/config/: base_placement_template.rviz  panda_base_placement_demo.rviz  panda_demo.rviz
map_generation/include/map_generation/: dataset_hdf5.h  discretization.h  hdf5_dataset.h  map_generation.h  reachability.h  utility.h  utils.h
map_generation/launch/: generate_map.launch  map_gen.launch  moveit_pkgs.launch  panda_demo.launch  ur5_demo.launch
map_generation/maps/: fetch_arm_0.08_reachability.h5  panda_arm_0.15_inverse_reachability.h5  panda_panda_arm_0.15_reachability.h5  panda_panda_arm_0.2_reachability.h5  pr2_right_arm_0.08_reachability.h5  pr2_right_arm_0.4_reachability.h5  pr2_right_arm_0.6_reachability.h5
map_generation/msg/: WorkSpace.msg  WsSphere.msg
map_generation/scripts/: helper.bash
map_generation/src/map_generation/: dataset_hdf5.cpp  discretization.cpp  hdf5_dataset.cpp  map_generation.cpp  reachability.cpp  utility.cpp  utils.cpp
map_generation/src/nodes/: map_generation_node.cpp
